# vanilla-dev-notice

./: .gitignore  README.md  meson.build  org.vanillaos.VanillaDevNotice.json
data/: meson.build  org.vanillaos.VanillaDevNotice.appdata.xml.in  org.vanillaos.VanillaDevNotice.autostart.desktop  org.vanillaos.VanillaDevNotice.desktop.in  org.vanillaos.VanillaDevNotice.gschema.xml
data/icons/: meson.build
debian/: changelog  control  copyright  files
po/: POTFILES  meson.build
src/: application.vala  main.vala  meson.build  vanilla-dev-notice.gresource.xml  window.ui  window.vala
